# timechecker

./: .env.example  .gitignore  CLAUDE.md  COMMIT_CONVENTION.md  README.md  TODOS.md  pyproject.toml
docs/: RUNBOOK.md
src/timechecker/: __init__.py  cli.py  config.py  logging_setup.py  pricing.py  registry.py  tasks.py
src/timechecker/collectors/: __init__.py  claude.py  codex.py  git.py  hooks.py  orchestrator.py  plane.py  scheduler.py  ts.py
src/timechecker/metrics/: __init__.py  engine.py
src/timechecker/ops/: __init__.py  health.py
src/timechecker/reporting/: __init__.py  report.py
src/timechecker/storage/: __init__.py  base.py  db.py  migrate.py  pg_schema.py  postgres_repository.py  repository.py  schema.py  sqlite_repository.py  sync.py  tg_assistant.py
tests/: test_cli.py  test_collectors.py  test_collectors_codex.py  test_collectors_git.py  test_collectors_plane.py  test_config.py  test_metrics.py  test_ops.py  test_orchestrator.py  test_postgres.py  test_pricing.py  test_registry.py  test_report.py  test_security.py  test_smoke.py  test_storage.py  test_sync.py  test_tasks.py  test_tasks_sprints.py  test_tg_assistant.py
work_directory/: WORKFLOW.md
work_directory/00_global_plan/: 00_timechecker_config.json  00_timechecker_global_plan.md  00_timechecker_init.md  00_timechecker_plan.json  00_timechecker_spec.md  00_timechecker_sync-state.json
