[project]
name = "timechecker"
version = "0.3.0"
description = "Учёт реального рабочего времени сотрудников по output-сигналам (Claude/git/Plane)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pg = ["psycopg[binary]>=3.2"]

[project.scripts]
timechecker = "timechecker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timechecker"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "psycopg[binary]>=3.2"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
